--- a/front/src/App.css
+++ b/front/src/App.css
@@ -2,3 +2,19 @@
   margin: 0;
   padding: 0;
 }
+
+/* FORMULARIO */
+.label{
+  display: flex;
+  flex-direction: column;
+}
+.contenedor-dni{
+  display: flex;
+  justify-content: space-around;
+}
+.contenedor-domicilio{
+  display: flex;
+}
+.width-domocilio{
+  width: 90%;
+}
