--- a/front/src/App.css
+++ b/front/src/App.css
@@ -2,11 +2,31 @@
   margin: 0;
   padding: 0;
 }
+:root{
+  --white:#ffffff;
+  --black:#333333;
+  --blue:#37BBED;
+  --gray:#cecece;
+
+}
 
 /* FORMULARIO */
+form{
+  width: 38vw;
+  height: 80vh;
+  padding: 35px;
+  box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 33px;
+}
 .label{
   display: flex;
   flex-direction: column;
+}
+input, select{
+  background-color: var(--gray);
+  border: none;
+  border-radius: 5px;
+  padding: 4px;
 }
 .contenedor-dni{
   display: flex;
@@ -17,4 +37,16 @@
 }
 .width-domocilio{
   width: 90%;
+}
+.btn-enviar{
+  background-color: var(--blue);
+  padding: 1vh 5vw;
+  border-radius: 5px;
+  border: 2.5px solid var(--blue);
+  transition: 0.4s;
+}
+.btn-enviar:hover{
+  background-color: var(--white);
+  color: var(--black);
+  transition: 0.4s;
 }
