--- a/front/src/App.css
+++ b/front/src/App.css
@@ -12,8 +12,13 @@
 /* ENCABEZADO */
 .encabezado{
   width: 100%;
-  height: 6vh;
   background-color: var(--blue);
+  display: flex;
+}
+.logo_ministerio{
+  max-height: 8vh;
+  padding: .5rem;
+  align-self: center;
 }
 /* FORMULARIO */
 .contenedor-formulario{
@@ -40,7 +45,7 @@ input, select{
   padding: 4px;
   color:var(--black)
 }
-input:focus {
+input:focus select:focus {
   outline: none;
 }
 .contenedor-dni{
