--- a/front/src/Registradas.css
+++ b/front/src/Registradas.css
@@ -3,6 +3,7 @@
     --black:#333333;
     --blue:#37BBED;
     --gray:#f3f3f3;
+    --dark-blue:#37bced7d;
 }
 .cont-contenedor-cards{
     display: flex;
@@ -62,7 +63,7 @@
 
 }
 .usuario-cont{
-    width: 45%;
+    width: 100%;
     gap: 1rem;
     margin: 5vh ;
 }
@@ -79,6 +80,9 @@
     width: 100%;
     padding: 0 0.5rem
 }
+.serv-usuario{
+    margin: 5vh 5vh 0 0;
+}
 
 /*form usuario*/
 .cont-titulo{
@@ -91,12 +95,18 @@
 }
 .editor{ 
     box-shadow: none;
-    margin: 0 10px;
+    margin: 0;
     padding: 0;
     width: 85%;
 }
 
 /* Administrador */
+.margen-servicios{
+    margin-top: 2vh;
+}
+.cont-serv-linea{
+    padding: .5rem 0;
+}
 .cont-admin-servicios{
     display: flex;
     margin: 2rem;
@@ -118,4 +128,34 @@
     box-shadow:none;
     padding: 0;
     margin-bottom: 0;
+}
+.admin-servicio{
+    display: flex;
+    justify-content: space-between;
+}
+.iconos-edicion{
+    display: flex;
+    gap: 0.5rem
+}
+.linea{
+    height: 1px;
+    background-color: var(--black);
+}
+.btn-agregar{
+    transition: .3s;
+    background-color: var(--blue);
+    font-weight: 600;
+    padding: .7rem 0;
+}
+.btn-agregar:hover{
+    transition: .3s;
+    background-color: var(--dark-blue);
+}
+div:where(.swal2-icon).swal2-warning {
+    border-color: #ebc418 !important;
+    color: #ebc418 !important;
+}
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
+    background-color: var(--blue) !important;
+    color: var(--black) !important;
 }
