--- a/front/src/App.css
+++ b/front/src/App.css
@@ -86,7 +86,6 @@
   text-decoration: none;
   text-align: center;
 }
-
 .btn-crear-cuenta:hover{
   background-color: #37bced7b;
   transition: .4s;
@@ -94,6 +93,20 @@
 .input-inicio{
   padding: .7rem;
   width: 20vw;
+}
+.ver-contrasena{
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
+  background-color: var(--gray) ;
+  color:var(--black);
+  border: none;
+  border-radius: 5px;
+}
+.ojo>svg{
+  cursor: pointer;
+  font-size: 1.1rem;
+  align-self: center;
 }
 /* FORMULARIO */
 .contenedor-formulario{
@@ -112,19 +125,24 @@ form{
 .label{
   display: flex;
   flex-direction: column;
+  width: 100%;
+}
+.input-barrio{
+  width: 100%;
 }
 input, select{
-  font-size: 14px;
+  font-size: 16px;
   background-color: var(--gray) ;
   color:var(--black);
-  padding: 4px;
   border: none;
   border-radius: 5px;
-  padding: .4rem;
   cursor: pointer;
 }
 input:focus, select:focus {
   outline: none !important;
+}
+.input-form{
+  padding: .4rem;
 }
 .input_mediano{
   width: 31%;
@@ -138,10 +156,12 @@ input:focus, select:focus {
 .contenedor-nombre, .contenedor-celMail{
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 .contenedor-domicilio{
   display: flex;
+  gap: 1rem;
 }
 .width-domocilio{
   width: 90%;
