--- a/front/src/Registradas.css
+++ b/front/src/Registradas.css
@@ -62,9 +62,10 @@
     padding: 0 3vw; 
     box-shadow: none; 
     border-radius: 0;
-
+    display: flex;
+    flex-direction: row;
 }
-.buscador{
+.buscador, .agregar-usuarios-csv{
     display: flex;
     gap: 15px
 }
@@ -82,6 +83,27 @@
 }
 .btn-eliminar:focus{
     outline: none !important;
+}
+.usuarios-csv{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.titulo-usuarios-csv{
+    font-weight: 600;
+}
+.btn-agregar-csv{
+    color: var(--black);
+    font-weight: 600;
+    padding: .5rem;
+    background-color: var(--blue);
+    transition: .4s;
+    border: none;
+    border-radius: .5rem;
+}
+.btn-agregar-csv:hover{
+    background-color: var(--dark-blue);
+    transition: .4s;
 }
 
 /* Usuario */
@@ -103,7 +125,6 @@
     gap: .7rem;
 }
 .texto-info{
-    text-decoration: underline;
     width: 100%;
     padding: 0 0.5rem
 }
