--- a/front/src/App.css
+++ b/front/src/App.css
@@ -210,6 +210,65 @@ input:focus, select:focus {
   padding: .4rem;
 }
 
+/* PAG ADMIN */
+.pag-admin{
+  display: flex;
+  flex-direction: column;
+}
+.bloque-usuarios-Admin{
+  display: flex;
+  gap: 100px;
+  height: 80vh;
+  align-items: center;
+}
+.agregar-administrador{
+  display: flex;
+  justify-content: flex-end;
+}
+.cargar-usuarios-admin, .direccionAregistradas{
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  box-shadow: 0px 6px 4px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+}
+.titulos-card-admin{
+  text-align: center;
+}
+.btns-cargar-usuarios{
+  display: flex;
+  gap: 10px;
+}
+.btn-individual, .btn-lote, .btn-registrados{
+  background-color: var(--blue);
+  padding: .5rem 1rem;
+  color: var(--black);
+  border-radius: 5px;
+  border: 3px solid var(--blue);
+  font-weight: 500;
+  font-size: 18px;
+  transition: .3s;
+}
+.mas-agregar{
+  align-self: center;
+  margin-left: .7rem;
+  font-size: 20px;
+}
+.btn-individual:hover, .btn-lote:hover, .btn-registrados:hover{
+  background-color: var(--white);
+  transition: .3s;
+}
+.btn-agregar-admin{
+  display: flex;
+  border: 2px solid var(--blue);
+  background-color: #ffffff;
+  color: var(--black);
+  font-size: 18px;
+  border-radius: 5px;
+  padding: .5rem 1rem;
+}
+
 /* Responsive */
 @media (max-width: 1050px) {
   .fondo-inicio{
