--- a/front/src/Registradas.css
+++ b/front/src/Registradas.css
@@ -103,6 +103,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    width: 50%;
 }
 .titulo-usuarios-csv{
     font-weight: 600;
@@ -187,7 +188,22 @@
 .select-estado{
     background: none;
 }
-
+/* Exportar */
+.text-exportar{
+    align-self: flex-end;
+}
+.btn-exportar{
+    padding: 0.3rem 2rem;
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    font-size: 14px;
+    width: fit-content;
+    align-self: flex-end;
+}
+.btn-exportar>svg{
+    align-self: center;
+}
 /*form usuario*/
 .cont-titulo{
     display: flex;
@@ -214,6 +230,12 @@
     display: flex;
     margin: 2rem;
     gap: 2rem;
+}
+.cont-servicios{
+    width: 100%;
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
 }
 .usuario-cont-admin, .contenedor-usuario-admin{
     width: 100%;
